--- a/README
+++ b/README
@@ -1,25 +1,47 @@
 2bsd2git
 ~~~~~~~~
-small utilities for automatic processing of 2.11-BSD patches into git
-commits.
+
+a collection of small utilities for automatic transmogrification of
+2.11-BSD patches into git commits.
 
 status
 ~~~~~~
-works from pl431 to 459. 
+
+this thing is a work in progress so adjust expectations accordingly.
+
+known issues
+~~~~~~~~~~~~
+
+- the only piece of file metadata git stores is the executable bit
+- replicating the application recipe in patch2commit.sh is what it is
+
+todo
+~~~~
+
+verify the output against a manually upgraded known-good system.
 
 quick guide
 ~~~~~~~~~~~
+
 from zero to repo:
 
 $ make
 
-run one patch only:
+subtargets
+~~~~~~~~~~
 
-$ make PATCH=460 singleshot
+apply a single patch:
+
+$ make PATCH=460 apply
+
+update the 2.11-BSD distribution files via rsync:
+
+$ make update
 
 longer explanation
 ~~~~~~~~~~~~~~~~~~
-make all does the following:
+
+the default make target does the following:
 
 - rsync 2.11-BSD from TUHS
 - extract the root dump and file[678].tar.gz into a directory
